// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|Field align 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c5 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c5 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="c4"
      id="username"
      onChange={[Function]}
      placeholder="Please type username"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots interact|Field default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="c4"
      id="username"
      onChange={[Function]}
      placeholder="Please type username"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots interact|Field horizontal 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c5 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c5 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="c4"
      id="username"
      onChange={[Function]}
      placeholder="Please type username"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots interact|Field multiple 1`] = `
.c0 {
  padding: 12px;
}

.c15 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c21 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c31 .c12 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c32 .c12 {
  font-size: 1.5em;
}

.c33 .c12 {
  font-size: 1.5em;
}

.c34 .c12 {
  font-size: 1.5em;
}

.c35 .c12 {
  font-size: 1.5em;
}

.c36 .c12 {
  font-size: 1.5em;
}

.c37 .c12 {
  font-size: 1.5em;
}

.c38 .c12 {
  font-size: 1.5em;
}

.c39 .c12 {
  font-size: 1.5em;
}

.c40 .c12 {
  font-size: 1.5em;
}

.c41 .c12 {
  font-size: 1.5em;
}

.c42 .c12 {
  font-size: 1.5em;
}

.c43 .c12 {
  font-size: 1.5em;
}

.c44 .c12 {
  font-size: 1.5em;
}

.c45 .c12 {
  font-size: 1.5em;
}

.c46 .c12 {
  font-size: 1.5em;
}

.c47 .c12 {
  font-size: 1.5em;
}

.c48 .c12 {
  font-size: 1.5em;
}

.c49 .c12 {
  font-size: 1.5em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c4 > .c3 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c20 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c20 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c20 + label:focus {
  outline: 0;
}

.c20 + label:empty {
  padding: 0 0 0 1em;
}

.c20 + label::before,
.c20 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c20 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c20 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c20 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c20:focus + label::before,
.c20 + label:hover::before {
  background-color: #999;
}

.c20:checked + label {
  color: #222;
}

.c20:checked + label::before {
  background-color: #222;
}

.c20:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c8 {
  display: block;
}

.c7 {
  position: relative;
  width: 100%;
}

.c14 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c1 {
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c2:not(:last-child) {
  margin-bottom: 1.25em;
}

.c2 > .c3:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c2 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c50 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c50 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c50 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c51 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c51 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c51 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c6:not(:last-child) {
  margin-bottom: 1.25em;
}

.c6 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 30em;
  -ms-flex-preferred-size: 30em;
  flex-basis: 30em;
}

.c6 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c6 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c52 .c12 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  color: #999;
}

.c18 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 .c12 {
  pointer-events: none;
}

.c11 {
  padding-right: 2.2em;
}

.c13 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 10px;
  position: absolute;
  font-size: 20px;
  cursor: not-allowed;
  right: 0.5em;
}

.c10[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c16 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="username"
      >
        Username
      </label>
      <input
        className="c5"
        id="username"
        onChange={[Function]}
        placeholder="Please type username"
        type="text"
      />
    </div>
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="email"
      >
        Email address
        <label
          className="c3 c4"
        >
          We will never sell your email address and we will never spam you!
        </label>
      </label>
      <input
        className="c5"
        id="email"
        onChange={[Function]}
        placeholder="Please type email address"
        type="text"
      />
    </div>
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="name"
      >
        Receive newsletter
      </label>
      <input
        className="c5"
        id="name"
        onChange={[Function]}
        placeholder="Please type full name"
        type="text"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c6"
    >
      <label
        className="c3 c4"
        htmlFor="username2"
      >
        Username
      </label>
      <input
        className="c5"
        id="username2"
        onChange={[Function]}
        placeholder="Please type username"
        type="text"
      />
    </div>
    <div
      className="c6"
    >
      <label
        className="c3 c4"
        htmlFor="email2"
      >
        Email address
        <label
          className="c3 c4"
        >
          We will never sell your email address and we will never spam you, that's a promise you can rely on. All other promises you need to catch.
        </label>
      </label>
      <input
        className="c5"
        id="email2"
        onChange={[Function]}
        placeholder="Please type email address"
        type="text"
      />
    </div>
    <div
      className="c6"
    >
      <label
        className="c3 c4"
      >
        Select a value
      </label>
      <div
        className="c7"
        data-test="dropdown"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
            onClick={[Function]}
          >
            <input
              className="c10 c11 c5"
              disabled={true}
              onChange={[Function]}
              placeholder="Select with SelectList"
              type="text"
            />
            <span
              className="c12 c13"
              disabled={true}
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                />
              </svg>
            </span>
          </div>
          <div
            className="c14"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className="c15"
            >
              <div
                onKeyDown={[Function]}
              >
                <div
                  className="c16"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 30,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <ul
                    style={
                      Object {
                        "height": 30,
                        "pointerEvents": "",
                        "width": "100%",
                      }
                    }
                  >
                    <li
                      className="c17"
                      data-test="list-item"
                      onClick={[Function]}
                      onMouseOver={[Function]}
                      style={
                        Object {
                          "height": 30,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <div
                        className="c18"
                      >
                        <div
                          className="c19"
                        >
                          No items in this list...
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c6"
    >
      <label
        className="c3 c4"
      >
        Privacy consent
      </label>
      <span>
        <input
          checked={true}
          className="c20"
          id="4"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="c3 c4"
          htmlFor="4"
        >
          I want cookies
        </label>
      </span>
    </div>
  </div>
</div>
`;
